fix layout on safari

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -185,6 +185,7 @@ p {
         box-shadow: 0 0 15px rgba(#000, .25);
         margin: $spacing-sm;
         min-width: 150px;
+        max-height: 500px;
     }
 }
 
